<resources>
    <string name="app_name">MyLocationTracker</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="text_label_1">page 1</string>
    <string name="text_label_2">page 2</string>
    <string name="submit">submit</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="settings">Settings</string>
    <string name="test">Test</string>
    <string name="add">Add</string>
    <string name="measurement">Measurement</string>
    <string name="geocoding">Geocoding</string>
    <string name="qrcode">QR Code</string>
    <string name="myzone">My Zone</string>
    <string name="entercode">Enter secure code</string>
    <string name="scanqrcode">Scan QR Code</string>
    <string name="next">Next</string>
    <string name="enteraddress">Enter Address</string>
    <string name="addresstomarker">Address to Marker</string>
    <string name="enterlatitude">Enter Latitude</string>
    <string name="enterlongitude">Enter Longitude</string>
    <string name="latlngtomarker">Latitude and Longitude to Marker</string>
    <string name="addhome">Add home</string>
    <string name="addcompany">Add company</string>
    <string name="addschool">Add school</string>
    <string name="addnewarea">Add a new area</string>
    <string name="serchlocation">Search a location</string>
    <string name="scope">Scope: 0m</string>
    <string name="save">Save</string>
    <string name="entername">Enter a name for the area</string>
    <string name="example">example: home</string>
    <string name="triggers">Triggers</string>
    <string name="alerts">Alerts</string>
    <string name="selftrigger">When I enter/leave an alert area</string>
    <string name="contactstrigger">When contacts enter/leave an alert area</string>
    <string name="enteralerts">When entering location</string>
    <string name="levingalerts">When leaving location</string>
</resources>