<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/et_latitude"
        android:singleLine="true"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:hint="@string/enterlatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_longitude"
        android:singleLine="true"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:hint="@string/enterlongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_latlng_to_address"
        android:text="@string/latlngtomarker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/blue"/>

    <EditText
        android:id="@+id/et_address"
        android:singleLine="true"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:hint="@string/enteraddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_address_to_latlng"
        android:text="@string/addresstomarker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/blue"/>

</LinearLayout>
