<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AddContactActivity">


    <EditText
        android:id="@+id/et_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entercode" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_qr_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanqrcode"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/blue"
        app:cornerRadius="12dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/next"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/black"
        app:cornerRadius="12dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp" />

</LinearLayout>